--- a/package.json
+++ b/package.json
@@ -3,37 +3,43 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@capacitor/core": "2.4.7",
-    "@hookform/error-message": "0.0.5",
-    "@ionic/react": "5.4.4",
-    "@ionic/react-router": "5.4.4",
+    "@capacitor/app": "1.1.1",
+    "@capacitor/core": "3.4.3",
+    "@capacitor/haptics": "1.1.4",
+    "@capacitor/ios": "3.4.3",
+    "@capacitor/keyboard": "1.2.2",
+    "@capacitor/status-bar": "1.0.8",
+    "@hookform/error-message": "2.0.0",
+    "@ionic/react": "^6.0.0",
+    "@ionic/react-router": "^6.0.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
-    "@types/jest": "^24.0.25",
-    "@types/node": "^12.12.24",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.4",
-    "@types/react-router": "^5.1.4",
-    "@types/react-router-dom": "^5.1.3",
-    "ionicons": "5.2.3",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-hook-form": "^6.15.1",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
-    "typescript": "3.8.3"
+    "@types/jest": "^26.0.20",
+    "@types/node": "^12.19.15",
+    "@types/react": "^16.14.3",
+    "@types/react-dom": "^16.9.10",
+    "@types/react-router": "^5.1.11",
+    "@types/react-router-dom": "^5.1.7",
+    "ionicons": "6.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-hook-form": "7.29.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^5.0.0",
+    "swiper": "^8.0.7"
   },
   "scripts": {
-    "start": "FAST_REFRESH=false react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!(@ionic/react|@ionic/react-router|@ionic/core|@stencil/core|ionicons)/)'",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
-      "react-app"
+      "react-app",
+      "react-app/jest"
     ]
   },
   "browserslist": {
@@ -49,8 +55,9 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "2.4.7",
-    "@ionic/lab": "3.2.10"
+    "@capacitor/cli": "3.4.3",
+    "@ionic/cli": "6.19.0",
+    "@ionic/lab": "3.2.11"
   },
   "description": "An Ionic project"
 }
